# advstats

./: .gitattributes  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
advstats/: __init__.py  _version.py
advstats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
advstats/core/: api.py  clust.py  strat.py
advstats/tests/: test_clust.py  test_strat.py
