[metadata]
name = advstats
version = 0.0.1
description = Libarary for statisical analysis on non-standard sampling methods
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pavanadapa.github.io
author = Pavan Kumar Adapa
author_email = pavan.adapa@uconn.edu
license = MIT LICENSE
license_files = LICENSE
platforms = any
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics

project_urls =
    Bug Tracker = https://github.com/pavanadapa/AdvStats/issues
    Documentation = https://pavanadapa.github.io
    Source Code = https://github.com/pavanadapa/AdvStats

[options]
packages = find:
install_requires =
    numpy>=1.23.1
    pandas>=1.4.3
python_requires = >=3.8
include_package_data = True
zip_safe = False

[versioneer]
VCS = git
style = pep440
versionfile_source = advstats/_version.py
versionfile_build = advstats/_version.py
tag_prefix =
parentdir_prefix = advstats-